--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -1,7 +1,10 @@
 /* src/components/ProductList.css */
 
 .product-container {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+    background-image: "../../public/images/unnamed.png";
+    align-content: center;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Responsive grid */
     gap: 20px; /* Space between the cards */
     padding: 20px; /* Padding around the grid */
