--- a/src/components/CartPage.css
+++ b/src/components/CartPage.css
@@ -6,11 +6,13 @@
 
 
 .cart-page {
+  display: flex;
+  flex-direction: column;
   padding: 20px;
   background-color: #f9f9f9; /* Light grey background */
   border: 1px solid #ccc; /* Grey border */
-  border-radius: 5px; /* Slightly rounded corners */
-  max-width: 600px; /* Limit the width for a cleaner look */
+  border-radius: px; /* Slightly rounded corners */
+  width: 80%; /* Limit the width for a cleaner look */
   margin: 20px auto; /* Center the cart on the page */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
@@ -73,7 +75,9 @@
 .quantity-controls span {
   margin: 0 10px; /* Space around quantity display */
 }
-
+.item-details{
+  color: rgb(0, 0, 0);
+}
 .remove-button {
   background-color: #2e1416; /* Bootstrap danger color */
   color: white;
